--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Sora, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
