--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,61 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  border-radius: 10px;
+  padding: 10px 20px;
+  box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.1);
+  gap: 20px;
+}
+
+.cactus {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.tag {
+  background-color: #e6d6fc;
+  color: #883ae1;
+  font-size: 12px;
+  font-weight: bold;
+  width: fit-content;
+  padding: 6px 20px;
+  border-radius: 10px;
+}
+
+.content {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.content h4 {
+  margin: 0;
+  font-size: 22px;
+}
+
+.content p {
+  margin: 0;
+  text-align: left;
+  text-wrap: balance;
+  color: #6c727f;
+}
+
+footer {
+  width: 100%;
+  border-top: 2px solid #e5eaf0;
+}
+
+.author {
+  color: #6c727f;
+  font-size: 14px;
+}
